classSet performance improve, fixed iE6 render bug on scrollbar
git-svn-id: http://ufd.googlecode.com/svn/trunk@93 9c53cf46-e557-11de-ab96-fd2e03e142b3

--- a/css/ufd-base.css
+++ b/css/ufd-base.css
@@ -29,7 +29,7 @@
 .ufd button,
 #ufd-container div.list-scroll,
 #ufd-container div.list-wrapper,
-#ufd-container li {
+#ufd-container ul {
     overflow: hidden;
 }
 
